changes last minute

--- a/files_for_lab/csv_files/lab-customer-analysis-round-1-Fred.ipynb
+++ b/files_for_lab/csv_files/lab-customer-analysis-round-1-Fred.ipynb
@@ -2420,7 +2420,7 @@
     }
    ],
    "source": [
-    "filtered_data = data[(data.income >= 0)"
+    "filtered_data = data[(data.income ><= 0)"
    ]
   },
   {
