--- a/files_for_lab/csv_files/lab-customer-analysis-round-1-Fred.ipynb
+++ b/files_for_lab/csv_files/lab-customer-analysis-round-1-Fred.ipynb
@@ -2409,18 +2409,223 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_data = data[(data.income > 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-29-2ce819e61668>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-29-2ce819e61668>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    filtered_data = data[(data.income >= 0)\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer</th>\n",
+       "      <th>st</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>customer lifetime value</th>\n",
+       "      <th>income</th>\n",
+       "      <th>monthly premium auto</th>\n",
+       "      <th>policy type</th>\n",
+       "      <th>vehicle class</th>\n",
+       "      <th>total claim amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AI49188</td>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>F</td>\n",
+       "      <td>12887.4317</td>\n",
+       "      <td>48767.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Two-Door Car</td>\n",
+       "      <td>566.472247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GA49547</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5363.0765</td>\n",
+       "      <td>36357.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>17.269323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>OC83172</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>F</td>\n",
+       "      <td>8256.2978</td>\n",
+       "      <td>62902.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Two-Door Car</td>\n",
+       "      <td>159.383042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>XZ87318</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5380.8986</td>\n",
+       "      <td>55350.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>Corporate Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>321.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>DY87989</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>M</td>\n",
+       "      <td>24127.5040</td>\n",
+       "      <td>14072.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>Corporate Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>511.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7063</th>\n",
+       "      <td>TF56202</td>\n",
+       "      <td>California</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>66367.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Two-Door Car</td>\n",
+       "      <td>307.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7064</th>\n",
+       "      <td>YM19146</td>\n",
+       "      <td>California</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47761.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>541.282007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7065</th>\n",
+       "      <td>LA72316</td>\n",
+       "      <td>California</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>71941.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>198.234764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7066</th>\n",
+       "      <td>PK87824</td>\n",
+       "      <td>California</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21604.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>Corporate Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>379.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7068</th>\n",
+       "      <td>UP19263</td>\n",
+       "      <td>California</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21941.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>691.200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6843 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     customer          st gender  customer lifetime value   income  \\\n",
+       "2     AI49188      Nevada      F               12887.4317  48767.0   \n",
+       "4     GA49547  Washington      M                5363.0765  36357.0   \n",
+       "5     OC83172      Oregon      F                8256.2978  62902.0   \n",
+       "6     XZ87318      Oregon      F                5380.8986  55350.0   \n",
+       "8     DY87989      Oregon      M               24127.5040  14072.0   \n",
+       "...       ...         ...    ...                      ...      ...   \n",
+       "7063  TF56202  California      M                      NaN  66367.0   \n",
+       "7064  YM19146  California      F                      NaN  47761.0   \n",
+       "7065  LA72316  California      M                      NaN  71941.0   \n",
+       "7066  PK87824  California      F                      NaN  21604.0   \n",
+       "7068  UP19263  California      M                      NaN  21941.0   \n",
+       "\n",
+       "      monthly premium auto     policy type  vehicle class  total claim amount  \n",
+       "2                    108.0   Personal Auto   Two-Door Car          566.472247  \n",
+       "4                     68.0   Personal Auto  Four-Door Car           17.269323  \n",
+       "5                     69.0   Personal Auto   Two-Door Car          159.383042  \n",
+       "6                     67.0  Corporate Auto  Four-Door Car          321.600000  \n",
+       "8                     71.0  Corporate Auto  Four-Door Car          511.200000  \n",
+       "...                    ...             ...            ...                 ...  \n",
+       "7063                  64.0   Personal Auto   Two-Door Car          307.200000  \n",
+       "7064                 104.0   Personal Auto  Four-Door Car          541.282007  \n",
+       "7065                  73.0   Personal Auto  Four-Door Car          198.234764  \n",
+       "7066                  79.0  Corporate Auto  Four-Door Car          379.200000  \n",
+       "7068                  96.0   Personal Auto  Four-Door Car          691.200000  \n",
+       "\n",
+       "[6843 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_data = data[(data.income ><= 0)"
+    "filtered_data"
    ]
   },
   {
