--- a/files_for_lab/csv_files/lab-customer-analysis-round-1-Fred.ipynb
+++ b/files_for_lab/csv_files/lab-customer-analysis-round-1-Fred.ipynb
@@ -2633,7 +2633,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = data.drop_duplicates()"
+   ]
   }
  ],
  "metadata": {
